--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=""
-LANGCHAIN_TRACING_V2 = true
-LANGCHAIN_API_KEY = ""
-LANGCHAIN_PROJECT = "project-name"
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGCHAIN_API_KEY=""
+LANGCHAIN_PROJECT=""
