--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ langchain-core==0.1.3
 langchain-community==0.0.8
 docx2txt==0.8
 pypdf==3.17.4
-langchain-chroma==0.0.5
+langchain-chroma==0.1.4
 sentence-transformers==2.2.2
+chromadb
+openai
