--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.39.0
 python-dotenv==1.0.0
 fastapi==0.104.1
 uvicorn==0.24.0
-langchain-core>=0.1.7,<0.2.0
+langchain-core==0.1.7
 langchain-openai==0.0.2.post1
 langchain-community==0.0.8
 docx2txt==0.8
@@ -11,4 +11,4 @@ langchain-chroma==0.1.4
 sentence-transformers==2.2.2
 chromadb
 openai
-langchain>=0.0.352
+langchain==0.0.352
