--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,20 @@
 services:
   - type: web
-    name: edurag
+    name: ultimatelearning-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: ./start.sh
+    startCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHONUNBUFFERED
         value: "true"
-    autoDeploy: false
+
+  - type: web
+    name: ultimatelearning
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: streamlit run app/streamlit_app.py --server.port $PORT --server.address 0.0.0.0
+    envVars:
+      - key: FAST_API_URL
+        value: "https://ultimatelearning-api.onrender.com"
+      - key: PYTHONUNBUFFERED
+        value: "true"
