--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
 LANGCHAIN_API_KEY=""
 LANGCHAIN_PROJECT=""
 FAST_API_URL=""
+ADMIN_TOKEN="your-secure-token-here"
